// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render with border prop (and hollow) 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #0588cb;
  background-color: transparent;
  border: 4px solid #0588cb;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  font-size: 16px;
}

.c0:hover:enabled {
  border: 4px solid #37a6ed;
  background-color: transparent;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: 4px solid #0f77b8;
  background-color: transparent;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with fontSize prop 1`] = `
.c0 {
  border-radius: 44px;
  display: inline-block;
  height: 55px;
  line-height: 1;
  padding-left: 44px;
  padding-right: 44px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  font-size: 22px;
}

.c0:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

<button
  class="c0"
  font-size="2"
/>
`;

exports[`Button render with hollow prop 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #0588cb;
  background-color: transparent;
  border: 2px solid #0588cb;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  font-size: 16px;
}

.c0:hover:enabled {
  border: 2px solid #37a6ed;
  background-color: transparent;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: 2px solid #0f77b8;
  background-color: transparent;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with inverted prop 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #0588cb;
  background-color: #f8f9fa;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  font-size: 16px;
}

.c0:hover:enabled {
  border: none;
  background-color: #f1f3f5;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #e9ecef;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with margin prop 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  margin: 8px;
  font-size: 16px;
}

.c0:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with width prop 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  width: 100%;
  font-size: 16px;
}

.c0:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

<button
  class="c0"
  font-size="1"
  width="1"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  font-size: 16px;
}

.c0:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c0:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

<button
  class="c0"
  font-size="1"
/>
`;
